--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,15 @@
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
   <link rel="stylesheet/less" href="/static/css/main.less">
-  {% block css %}{% endblock %}
+  {% block css %}
+  <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  {% endblock %}
+  
+  {% block js %}
+  <script src="https://code.jquery.com/jquery-git.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  {% endblock %}
 
   <!-- Rather use `less.js` to dynamically compile your `stylesheet/less` files? -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.4.1/less.min.js"></script>
@@ -29,7 +37,7 @@
 
 </head>
 
-<body>
+<body ng-app="wishlistApp">
 
   <header>
     {% include "header.html" %}
@@ -52,7 +60,7 @@
 
 
   <!-- Additional JavaScript libraries and plugins... -->
-  {% block js %}{% endblock %}
+  
 
 
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
