--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -28,7 +28,7 @@ body{
         <h3>Welcome {{profile.firstname}} {{profile.lastname}}</h3>
         <h4>Please select an option below: </h4>
         <a href="/api/user/{{profile.id}}/wishlist">Add a wish to your wishlist.</a><br><br>
-        <a href="/api/user/{{profile.id}}/wishlist">Remove a wish from your wishlist.</a><br><br>
+        <a href="/api/user/{{profile.id}}/wishlists/remove">Remove a wish from your wishlist.</a><br><br>
         <a href="/api/user/{{profile.id}}/wishlists">View your wishlist.</a><br><br>
       
         <a href="{{ url_for('logout') }}">Logout</a></li>
